fixed file browser from stretching to the rightmost screen on open

--- a/css/litegraph-editor.css
+++ b/css/litegraph-editor.css
@@ -37,7 +37,6 @@
 }
 
 .litegraph-editor {
-    width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
